--- a/shufl-web/src/app/components/shared/buttons/icon-button/icon-button.component.html
+++ b/shufl-web/src/app/components/shared/buttons/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<div class="button">
+<div class="button" [ngStyle]="{'height': height + 'px'}">
     <img class="icon" src="{{ buttonIconSource }}" alt="{{ buttonText }}">
     <span class="text">{{ buttonText }}</span>
 </div>
