--- a/shufl-web/src/app/components/shared/group/dialogs/add-to-group/add-to-group.component.scss
+++ b/shufl-web/src/app/components/shared/group/dialogs/add-to-group/add-to-group.component.scss
@@ -5,6 +5,15 @@
         font-size: 1.5em;
     }
 
+    .queue-button-container {
+        width: 100%;
+        height: 75px;
+
+        margin: 15px auto;
+
+        position: relative;
+    }
+
     .divider {
         height: 2px;
         margin: 15px 0;
@@ -57,6 +66,14 @@
                     text-align: center;
                 }
             }
+        }
+    }
+}
+
+@media (min-width: 730px) {
+    .add-to-group-modal {
+        .queue-button-container {
+            width: 60%;
         }
     }
 }
