--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -23,17 +23,16 @@
                     white-space: nowrap;
                 }
 
-                p,
-                a {
-                    color: $tertiary-foreground-colour;
-                }
-
                 a {
                     width: fit-content;
+
+                    color: $tertiary-foreground-colour;
 
                     margin: 5px auto;
 
                     display: block;
+
+                    cursor: pointer;
                 }
 
                 .action-button-container {
