tests: added account & register spec, fix for chrome security added login actions

--- a/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.html
+++ b/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <div class="nav-bar">
     <div class="app-icon white"></div>
-    <app-nav-bar-item [itemData]="homeItem" [active]="homeActive"></app-nav-bar-item>
-    <app-nav-bar-item [itemData]="searchItem" [active]="searchActive"></app-nav-bar-item>
-    <app-nav-bar-item [itemData]="groupsItem" [active]="groupsActive"></app-nav-bar-item>
-    <app-nav-bar-item [itemData]="userItem" [active]="userActive"></app-nav-bar-item>
+    <app-nav-bar-item data-cy="homeItem" [itemData]="homeItem" [active]="homeActive"></app-nav-bar-item>
+    <app-nav-bar-item data-cy="searchItem" [itemData]="searchItem" [active]="searchActive"></app-nav-bar-item>
+    <app-nav-bar-item data-cy="groupsItem" [itemData]="groupsItem" [active]="groupsActive"></app-nav-bar-item>
+    <app-nav-bar-item data-cy="userItem" [itemData]="userItem" [active]="userActive"></app-nav-bar-item>
     <p class="version">V{{ appVersion }}</p>
 </div>
